--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,10 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha1'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 
-def isReleaseBuild() {
-    return version.contains("SNAPSHOT") == false
-}
 
 allprojects {
     version = VERSION_NAME
@@ -19,5 +16,3 @@ allprojects {
         mavenCentral()
     }
 }
-
-apply plugin: 'android-reporting'
